...

                </FrameLayout>

            </FrameLayout>

            <EditText
                android:id="@+id/tour_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:padding="5dp"
                android:background="#EEEEEE"
...
                    android:text="Location:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/tour_location_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EEEEEE"
                    android:padding="5dp"
                    android:layout_marginEnd="24dp"
                    android:textSize="20sp"
...
                    android:text="Cost:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/tour_cost_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:padding="5dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
...
                    android:text="Start Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/tour_start_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
                    android:hint="Pick Date" />
...
                    android:text="End Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/tour_end_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20sp"
                    android:hint="Pick Date"/>
...
                    android:layout_weight="0.6"
                    android:text="@string/fragment_edit_tour_notifications"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/tour_public_cb"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_marginStart="180dp"
                    android:text="@string/fragment_edit_tour_public"
                    android:textColor="@color/colorAccent"
...
                    android:background="@drawable/ic_twitter"
                    android:textAllCaps="false"
                    android:textColor="#EEEEEE"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tour_add_attraction_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.32"
                    android:background="@drawable/btn_shape_selector_primary"
                    android:enabled="true"
...
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28dp" />

            <Button
                android:id="@+id/tour_update_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_shape_selector_white"
...
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/tour_navigation_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_shape_selector_white"
...
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28dp" />

            <Button
                android:id="@+id/tour_delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_shape_selector_accent"
...
